--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <!-- <script src="./js/script3.js" type="module"></script> -->
-    <script src="./js/codewars.js" type="module"></script>
-    <script src="./js/test.js"></script>
+    <!-- <script src="./js/codewars.js" type="module"></script> -->
+    <!-- <script src="./js/test.js"></script> -->
+    <script src="./js/task5.js" type="module"></script>
 </body>
 
 </html>
